kubernetes/controller.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: controller-deployment
  namespace: kube-kafka
  labels:
    app: controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: controller
  template:
    metadata:
      labels:
        app: controller
    spec:
      containers:
      - name: controller
        image: ghcr.io/rjmarques/controller:latest
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "1"
