kubernetes/worker.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: worker-deployment
  namespace: kube-kafka
  labels:
    app: worker
spec:
  replicas: 3
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
      - name: worker
        image: ghcr.io/rjmarques/worker:latest
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
