kubernetes/kafka.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: kafka-deployment
  namespace: kube-kafka
  labels:
    app: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
      - name: broker
        image: confluentinc/cp-kafka:7.4.3
        ports:
        - containerPort: 9092
        resources:
          limits:
            memory: "1024Mi"
            cpu: "500m"
        lifecycle:
          postStart:
            exec:
              command: ["/bin/bash", "-c",
                "echo -e 'Waiting for Kafka to become available';
                kafka-topics --bootstrap-server localhost:29092 --list;
                echo -e 'Creating Kafka topics';
                kafka-topics --bootstrap-server localhost:29092 --create --if-not-exists --topic consistency-checks-in --replication-factor 1 --partitions 4;
                kafka-topics --bootstrap-server localhost:29092 --create --if-not-exists --topic consistency-checks-out --replication-factor 1 --partitions 4;
                echo -e 'Successfully created the following topics:';
                kafka-topics --bootstrap-server localhost:29092 --list"
              ]
      - name: schema-registry
        image: confluentinc/cp-schema-registry:7.0.3
        ports:
          - containerPort: 8081
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"

---
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
  namespace: kube-kafka
spec:  
  type: NodePort
  selector:
    app: kafka
  ports:
    - protocol: TCP
      port: 9092
      targetPort: 9092
      nodePort: 30092
