kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-kafka-ingress
  namespace: kube-kafka
spec:
  ingressClassName: nginx
  rules:
  - host: kube.local
    http:
      paths:
      - path: /kafka
        pathType: Prefix
        backend:
          service:
            name: kafka-service
            port:
              number: 9092
